retirando IA do projeto, implementando checklist,note,pdf e agendamentos, refatorando todos os dtos e services, pra usar o record